--- a/.github/workflows/build-pcsx-rearmed.yml
+++ b/.github/workflows/build-pcsx-rearmed.yml
@@ -5,7 +5,7 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
-  workflow_dispatch:  # 手动触发
+  workflow_dispatch:
 
 env:
   TOOLCHAIN_URL: "https://github.com/game-de-it/GKD_pixel/releases/download/GKDpixel-toolchain-v1/mipsel-gcw0-linux-uclibc_sdk-buildroot.tar.gz"
@@ -41,25 +41,21 @@ jobs:
           libpng-dev \
           libvorbis-dev \
           libflac-dev \
-          libmpg123-dev
+          libmpg123-dev \
+          nasm
           
     - name: Download and setup toolchain
       run: |
-        # 创建/opt目录并设置权限
         sudo mkdir -p /opt
         sudo chmod 777 /opt
         
-        # 下载工具链
         cd /opt
         wget ${{ env.TOOLCHAIN_URL }}
         
-        # 解压工具链
         tar zxvf mipsel-gcw0-linux-uclibc_sdk-buildroot.tar.gz
         
-        # 重命名目录（可选）
         mv mipsel-gcw0-linux-uclibc_sdk-buildroot gcw0-toolchain
         
-        # 运行重定位脚本
         cd gcw0-toolchain
         ./relocate-sdk.sh
         
@@ -71,29 +67,54 @@ jobs:
         echo "CXX=${{ env.TOOLCHAIN_DIR }}/usr/bin/mipsel-gcw0-linux-uclibc-g++" >> $GITHUB_ENV
         echo "AR=${{ env.TOOLCHAIN_DIR }}/usr/bin/mipsel-gcw0-linux-uclibc-ar" >> $GITHUB_ENV
         echo "LD=${{ env.TOOLCHAIN_DIR }}/usr/bin/mipsel-gcw0-linux-uclibc-ld" >> $GITHUB_ENV
+        echo "STRIP=${{ env.TOOLCHAIN_DIR }}/usr/bin/mipsel-gcw0-linux-uclibc-strip" >> $GITHUB_ENV
+        echo "RANLIB=${{ env.TOOLCHAIN_DIR }}/usr/bin/mipsel-gcw0-linux-uclibc-ranlib" >> $GITHUB_ENV
         
-        # 设置编译标志
         echo "CFLAGS=-ffast-math -march=mips32 -mtune=mips32r2 -mhard-float -fdata-sections -ffunction-sections" >> $GITHUB_ENV
         echo "CXXFLAGS=-ffast-math -march=mips32 -mtune=mips32r2 -mhard-float -fdata-sections -ffunction-sections" >> $GITHUB_ENV
+        echo "LDFLAGS=-Wl,--gc-sections" >> $GITHUB_ENV
         
-        # 添加到PATH
         echo "${{ env.TOOLCHAIN_DIR }}/usr/bin" >> $GITHUB_PATH
         
     - name: Clone pcsx_rearmed repository
       run: |
-        git clone https://github.com/libretro/pcsx_rearmed.git
+        git clone --depth=1 https://github.com/libretro/pcsx_rearmed.git
         cd pcsx_rearmed
+        
+    - name: Configure pcsx_rearmed
+      run: |
+        cd pcsx_rearmed
+        
+        # 首先运行configure脚本
+        ./configure --platform=libretro
         
     - name: Build pcsx_rearmed
       run: |
         cd pcsx_rearmed
         
-        # 配置编译环境
+        # 设置环境变量
         export PATH="${{ env.TOOLCHAIN_DIR }}/usr/bin:$PATH"
-        export CROSS_COMPILE="${{ env.CROSS_COMPILE }}"
         
-        # 使用platform=gcw0参数编译
-        make platform=gcw0
+        # 使用正确的编译命令
+        # 方法1: 直接使用libretro的Makefile
+        make -f Makefile.libretro platform=gcw0
+        
+    - name: Alternative build method (if above fails)
+      if: failure()
+      run: |
+        cd pcsx_rearmed
+        
+        # 方法2: 使用交叉编译变量
+        make -f Makefile.libretro \
+          CC="${{ env.CC }}" \
+          CXX="${{ env.CXX }}" \
+          AR="${{ env.AR }}" \
+          LD="${{ env.LD }}" \
+          STRIP="${{ env.STRIP }}" \
+          CFLAGS="${{ env.CFLAGS }}" \
+          CXXFLAGS="${{ env.CXXFLAGS }}" \
+          LDFLAGS="${{ env.LDFLAGS }}" \
+          platform=gcw0
         
     - name: Check if binary was created
       run: |
@@ -101,8 +122,16 @@ jobs:
         if [ -f "pcsx_rearmed_libretro.so" ]; then
           echo "Build successful!"
           ls -la *.so
+          
+          # 检查文件类型
+          file pcsx_rearmed_libretro.so
+          
+          # 检查文件大小
+          du -h pcsx_rearmed_libretro.so
         else
           echo "Build failed - no .so file found"
+          # 列出所有文件查看有什么
+          ls -la
           exit 1
         fi
         
